--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div class="faq-set flex">
                 <div class="item flex">
                     <div class="faq-item-q flex" id="q1"><p>What is Netflix?</p><i class="fa-solid fa-caret-down" style="color: #ffffff;"></i></div>
-                    <div class="faq-item-a" id="a1">Netflix is a streaming service that offers a wide variety of award-winning TV shows, movies, anime, documentaries, and more on thousands of internet-connected devices.
+                    <div class="faq-item-a invisible" id="a1">Netflix is a streaming service that offers a wide variety of award-winning TV shows, movies, anime, documentaries, and more on thousands of internet-connected devices.
                     <br><br> You can watch as much as you want, whenever you want – all for one low monthly price. There's always something new to discover and new TV shows and movies are added every week!
                     </div>  
                 </div>
